--- a/themes/charity/static/sass/core/layout.scss
+++ b/themes/charity/static/sass/core/layout.scss
@@ -1,8 +1,20 @@
-body {
-    scroll-behavior: smooth;
-    margin: 0px;
-    padding: 0px;
+html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
+
+body {
+ position: relative;
+  height: 100%;
+  padding: 0;
+  overflow: auto;
+  overflow-y: scroll;
+  margin: 0;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
+
 
 .clear {
     @extend %clearfix;
